# serializer version: 1
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-decimal-avg-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.rarity) AS avg_fruits__avg_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_rarity" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-float-avg-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.water_percent) AS avg_fruits__avg_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_water_percent" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" = %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > $1::FLOAT
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > %(param_1)s
  '''
# ---
# name: test_avg_aggregation_filter[session-tracked-int-avg-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT avg(fruit_1.sweetness) AS avg_fruits__avg_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."avg_fruits__avg_sweetness" > %(param_1)s
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" > %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gte-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gte-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-gte-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" >= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-in-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-in-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-in-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" IN (__[POSTCOMPILE_param_1])
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" < %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lte-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lte-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-lte-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" <= %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-neq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-neq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-neq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_id" != %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-nin-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-nin-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter[session-tracked-nin-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.id) AS count_fruits__count_id
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."count_fruits__count_id" NOT IN (__[POSTCOMPILE_param_1]))
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-default-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-default-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-default-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-distinct-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-distinct-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-distinct-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(DISTINCT fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-non-distinct-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = $1::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-non-distinct-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_count_aggregation_filter_with_distinct[session-tracked-non-distinct-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT count(fruit_1.name) AS count_fruits__count_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."count_fruits__count_name" = %(param_1)s::INTEGER
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-contains-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-contains-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-contains-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-ilike-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-ilike-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-ilike-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-like-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE $1::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-like-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-like-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-startswith-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-startswith-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_max_string_aggregation_filter[session-tracked-startswith-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT max(fruit_1.name) AS max_fruits__max_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."max_fruits__max_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-contains-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%' || $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-contains-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-contains-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE '%%' || %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" = %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-ilike-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-ilike-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-ilike-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" ILIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-like-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE $1::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-like-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-like-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-startswith-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE $1::VARCHAR || '%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-startswith-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_min_string_aggregation_filter[session-tracked-startswith-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT min(fruit_1.name) AS min_fruits__min_name
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE (aggregation_0."min_fruits__min_name" LIKE %(param_1)s::VARCHAR || '%%' ESCAPE '/')
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-decimal-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.rarity) AS sum_fruits__sum_rarity
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_rarity" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-float-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.water_percent) AS sum_fruits__sum_water_percent
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_water_percent" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-eq-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-eq-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-eq-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" = %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-gt-match-async-asyncpg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > $1::FLOAT
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-gt-match-async-psycopg_async_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > %(param_1)s
  '''
# ---
# name: test_sum_aggregation_filter[session-tracked-int-gt-match-sync-psycopg_engine]
  '''
  SELECT color.id
    FROM color AS color
    JOIN LATERAL (
          SELECT sum(fruit_1.sweetness) AS sum_fruits__sum_sweetness
            FROM fruit AS fruit_1
           WHERE color.id = fruit_1.color_id
         ) AS aggregation_0
      ON TRUE
   WHERE aggregation_0."sum_fruits__sum_sweetness" > %(param_1)s
  '''
# ---
